# f5-xc-rbac

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  .secrets.baseline  CLAUDE.md  README.md  User-Database.csv  mkdocs.yml  pyproject.toml  requirements.txt  sample_sync.csv
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.github/: LABELS.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/prompts/: speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md
.github/workflows/: docs.yml  issue-label-guard.yml  pre-commit.yml  xc-group-sync.yml  xc_user_group_sync.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  mtls_proxy_authentication_research.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: ISSUE-46-summary.md  README.md  cli-reference.md  configuration.md  contributing.md  development.md  get-started.md  index.md  operations-guide.md  quality-standards.md  testing.md  troubleshooting.md  usage.md
docs/CICD/: deployment-guide.md  github-actions-guide.md  github-actions.md  gitlab-ci.md  jenkins-guide.md  jenkins.md
docs/CICD/examples/: Jenkinsfile  xc-sync-workflow.yml
docs/specifications/: README.md  user-group-sync-srs.md  user-lifecycle-management-srs.md
docs/specifications/api/contracts/: xc-iam.yaml
docs/specifications/development/: quality-standards.md
docs/specifications/guides/: troubleshooting-guide.md
docs/specifications/implementation/: roadmap.md  testing-strategy.md  workflows.md
samples/ci-cd/: README.md
samples/ci-cd/github-actions/: xc-group-sync.yml.sample  xc_user_group_sync.yml.sample
samples/ci-cd/jenkins/: Jenkinsfile.declarative.sample  Jenkinsfile.scripted.sample
scripts/: repository-settings.json  repository-settings.sh  setup_xc_credentials.sh
scripts/git/: branch_name_check.py  commit_msg_check.py
specs/001-xc-group-sync/: CSV_MAPPING.md  data-model.md  enhancements-cli-feedback.md  enhancements-config-environment.md  enhancements-retry-backoff.md  enhancements-setup-script.md  plan.md  quickstart.md  research.md  spec.md  specification.md  tasks.md
specs/001-xc-group-sync/checklists/: requirements.md
specs/041-precommit-requirements/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/041-precommit-requirements/contracts/: ci-lint.workflow.md
specs/056-csv-sync-impl/: data-model.md  plan.md  plan.md.bak  quickstart.md  quickstart.md.bak  research.md  research.md.bak
specs/056-csv-sync-impl/contracts/: openapi.yaml
specs/059-user-lifecycle/: data-model.md  enhancements-csv-validation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/059-user-lifecycle/checklists/: requirements.md
specs/059-user-lifecycle/contracts/: user_sync_api.md
specs/060-repository-automation/: spec.md
src/f5_xc_rbac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xc_rbac_sync/: cli.py  client.py  ldap_utils.py  models.py  protocols.py  sync_service.py  user_sync_service.py
src/xc_user_group_sync/: cli.py  client.py  ldap_utils.py  models.py  protocols.py  sync_service.py  user_sync_service.py  user_utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_ldap_utils.py  test_models.py  test_sync_service.py
tests/integration/: test_user_sync_integration.py
tests/unit/: test_cli_and_client.py  test_coverage_completeness.py  test_sync_service.py  test_user_sync_service.py  test_user_utils.py
