[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-xc-rbac"
version = "0.1.0"
description = "XC RBAC group sync tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Robin Mordasiewicz" }]
license = { text = "MIT" }
dependencies = [
  "click>=8.1.7",
  "ldap3>=2.9.1",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "black>=24.10.0",
]

[project.scripts]
xc-group-sync = "xc_rbac_sync.cli:cli"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  ".specify",
]
[tool.ruff.lint]
select = ["E", "F", "I"]
