[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-xc-user-group-sync"
version = "0.1.0"
description = "F5 Distributed Cloud User and Group Synchronization Tool"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Robin Mordasiewicz" }]
license = { text = "MIT" }
dependencies = [
  "click>=8.1.7",
  "ldap3>=2.9.1",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "tenacity>=9.0.0",
  "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.6.0",
  "black>=24.10.0",
  "mypy>=1.0.0",
  "types-requests>=2.31.0",
  "types-ldap3>=2.9.0",
]

[project.scripts]
xc_user_group_sync = "xc_user_group_sync.cli:cli"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  ".specify",
]
[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=xc_user_group_sync",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: Fast unit tests with heavy mocking",
  "integration: Integration tests with real component interaction",
  "slow: Tests that take >1 second to execute",
  "cli: Tests for CLI interface and commands",
  "api: Tests for API client functionality",
  "service: Tests for service layer business logic",
  "edge_case: Tests for edge cases and error handling",
  "security: Tests for security-related functionality",
]
filterwarnings = [
  "ignore::DeprecationWarning:pyasn1.codec.ber.encoder",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
